--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".MainActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
 
-        <activity android:name=".BookBuyActivity"
+        <activity android:name=".FindBookActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".Ui.PDFViewerActivity" />
         <activity
